--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             padding: 20px;
         }
         h1, h2, h3 {
-            color: #333;
+            color: red;
         }
         ul {
             list-style-type: none;
@@ -87,3 +87,4 @@
     </div>
 </body>
 </html>
+
