--- a/about.html
+++ b/about.html
@@ -19,6 +19,10 @@
         h1, h2, h3 {
             color: red;
         }
+        header {
+    background-color: blue;
+}
+
         ul {
             list-style-type: none;
             padding: 0;
