--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             padding: 20px;
         }
         h1, h2, h3 {
-            color: red;
+            color: blue;
         }
         header {
-    background-color: grey;
+    background-color: white;
 }
 
         ul {
@@ -54,12 +54,13 @@
         <div class="section">
             <h2>Education</h2>
             <ul>
-                <li>Bachelor of Science in Biotechnology, microbiology, chemistry.- SSBN Degree & PG College affiliated with S.K University, Master of science in molecular biology and biotechnology.SRM University Amaravati,Andhra pradesh. </li>
+                <li>Bachelor of Science in Biotechnology, microbiology, chemistry.- SSBN Degree & PG College affiliated with S.K University,
+                    Master of science in molecular biology and biotechnology.SRM University Amaravati,Andhra pradesh. </li>
             </ul>
         </div>
         
         <div class="section">
-            <h2>Experience</h2>
+            <h2>Internships/projects</h2>
             <ul>
                 <li>Internship - Ce chem pharmaceutical company,Banglore</li>
                 <li>Internship - O.V.R diagnostics center,Anantapur</li>
@@ -88,7 +89,7 @@
         
         <div class="section">
             <h2>Summary</h2>
-            <p>Motivated MSc graduate in Biotechnology and Molecular Biology with a strong foundation in genetic engineering, RNA biology, and bioinformatics. Proficient in molecular techniques such as PCR, cloning, and sequencing. Strong problem-solving abilities and a collaborative team player.</p>
+            <p>As an MSc graduate in Biotechnology and Molecular Biology with a strong foundation in genetic engineering, RNA biology, and bioinformatics. Proficient in molecular techniques such as PCR, cloning, and sequencing. Strong problem-solving abilities and a collaborative team player.</p>
         </div>
         </div>
     </div>
