--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             padding: 20px;
         }
         h1, h2, h3 {
-            color: navy blue;
+            color: dark blue;
         }
         header {
     background-color: white;
@@ -91,10 +91,7 @@
             </ul>
              </header>
         
-        <div class="section">
-            <h2>Summary</h2>
-            <p>As an MSc graduate in Biotechnology and Molecular Biology with a strong foundation in genetic engineering, RNA biology, and bioinformatics. Proficient in molecular techniques such as PCR, cloning, and sequencing. Strong problem-solving abilities and a collaborative team player.</p>
-        </div>
+        
         </div>
     </div>
 </body>
