--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My CV</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Lora, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -17,7 +17,7 @@
             padding: 20px;
         }
         h1, h2, h3 {
-            color: dark blue;
+            color: brown;
         }
         header {
     background-color: white;
