--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Lora, sans-serif;
-            line-height: 1.6;
+            line-height: 10;
             margin: 0;
             padding: 0;
         }
@@ -17,7 +17,7 @@
             padding: 20px;
         }
         h1, h2, h3 {
-            color: brown;
+            color: black;
         }
         header {
     background-color: white;
