--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My CV</title>
     <style>
         body {
-            font-family: Lora, sans-serif;
-            line-height: 10;
+            font-family: Archivo black, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
         }
